base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: esphome
  name: esphome
  namespace: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: esphome
    spec:
      containers:
        - name: esphome
          image: esphome/esphome
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
          volumeMounts:
            - name: esphome-data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 6052
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6052
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 6052
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: esphome-data
          persistentVolumeClaim:
            claimName: esphome-pvc
