base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: esphome
  name: esphome-svc
  namespace: esphome
spec:
  ports:
    - name: esphome
      port: 6052
      targetPort: http
      protocol: TCP
  selector:
    app: zesphome
